# NeoInfused

./: .gitignore  CMakeLists.txt  NeoInfused-Premake.lua  shared-build.lua  static-build.lua
Influx/: Influx-Premake.lua
Influx/include/: inf_pch.hpp
Influx/include/influx/: inf_core.hpp  inf_error.hpp  inf_hello-world.hpp  inf_loader.hpp  inf_renderer.hpp  inf_shader.hpp  inf_shaders-src.hpp  inf_window-surface.hpp
Influx/shaders/: fragment.glsl  vertex.glsl
Influx/src/: inf_hello-world.cpp  inf_pch.cpp
Influx/src/influx/: inf_hello-world.cpp  inf_loader.cpp  inf_renderer.cpp  inf_window-surface.cpp
Influx/vk/: ivk_core.hpp  ivk_hello-world.cpp  ivk_pch.cpp  ivk_pch.hpp  vk_core.cpp  vk_core.hpp  vk_hello-world.cpp  vk_pch.cpp  vk_pch.hpp  vk_shader.cpp  vk_shader.hpp  vk_swapchain-support.cpp  vk_swapchain-support.hpp  vk_window-surface.cpp  vk_window-surface.hpp  vk_window_surface.cpp  vk_window_surface.hpp
dependencies/: GLFW-Premake.lua
dependencies/glad/: CMakeLists.txt  glad-Premake.lua
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
glad/: glad-Premake.lua
glad/include/glad/: glad.h
glad/src/: glad.c
include/: neo_pch.hpp
include/NeoInfused/: NeoInfused.hpp  Neo_App.hpp  Neo_Renderer.hpp  Neo_Window.hpp  neo_core.hpp
include/NeoInfused/Core/: Neo_Color.hpp  Neo_Core.hpp  Neo_Time.hpp
include/NeoInfused/DataStructures/: Neo_Arena.hpp  Neo_Buffer.hpp
include/NeoInfused/ECS/: Neo_BasicComponents.hpp  Neo_Entity.hpp  Neo_EntityHandler.hpp  Neo_Object.hpp
include/NeoInfused/Layer/: Neo_Input.hpp  Neo_InputLayer.hpp  Neo_Layer.hpp  Neo_LayerGroup.hpp  Neo_LayerStack.hpp
include/NeoInfused/Scene/: Neo_Scene.hpp
include/NeoInfused/Sprite/: Neo_Font.hpp  Neo_Graphic2D.hpp  Neo_Sprite.hpp  Neo_SpriteData.hpp  Neo_SpriteHandle.hpp  Neo_SpriteHandler.hpp  Neo_SpriteRegistry.hpp  Neo_SpriteSheet.hpp  Neo_Text.hpp  Neo_Texture.hpp  Neo_TextureHandle.hpp  Neo_TextureRegistry.hpp
include/NeoInfused/core/: neo_app.hpp  neo_dynamic-library.hpp  neo_event-handler.hpp  neo_event.hpp  neo_frame-buffer.hpp  neo_input.hpp  neo_layer-group.hpp  neo_layer-storage.hpp  neo_layer.hpp  neo_scene.hpp  neo_scoped-timer.hpp  neo_timer.hpp  neo_utils.hpp  neo_window-storage.hpp  neo_window.hpp
include/NeoInfused/core/app/: neo_app.hpp  neo_core-subsystem.hpp  neo_window-subsystem.hpp  neo_window-system-set.hpp
include/NeoInfused/data_structures/: neo_event-handler.hpp  neo_event-queue.hpp  neo_layer-storage.hpp  neo_scene-storage.hpp  neo_typed-arena.hpp  neo_window-storage.hpp
include/NeoInfused/game/: neo_component-registry.hpp  neo_entity.hpp  neo_object.hpp  neo_scene-storage.hpp  neo_scene.hpp
include/NeoInfused/graphic/: neo_graphic.hpp  neo_shader.hpp  neo_triangle.hpp
include/NeoInfused/graphics/: neo_buffers.hpp  neo_context.hpp  neo_mesh.hpp  neo_shader.hpp  neo_shader_src.hpp  neo_shaders.hpp
include/NeoInfused/graphics/gl/: neo-gl_buffers.hpp  neo-gl_context.hpp  neo-gl_mesh.hpp  neo-gl_shader.hpp
include/NeoInfused/graphics/shaders/: neo_fragment.hpp  neo_vertex.hpp
include/NeoInfused/template/: neo_array-iterator.hpp  neo_array-list.hpp  neo_array-vector.hpp  neo_double-list-iterator.hpp  neo_double-list.hpp  neo_heap-object.hpp  neo_linked-list.hpp  neo_list-node.hpp  neo_single-list-iterator.hpp  neo_stack-list.hpp  neo_typed-arena.hpp
src/: Neo_PCH.cpp  Neo_PCH.hpp  neo_pch.cpp
src/NeoInfused/: Neo_App.cpp  Neo_Renderer.cpp  Neo_Window.cpp  neo_core.cpp
src/NeoInfused/Core/: Neo_Core.cpp  Neo_Core.hpp  Neo_Time.cpp
src/NeoInfused/DataStructures/: Neo_Buffer.cpp
src/NeoInfused/ECS/: Neo_Entity.cpp  Neo_EntityHandler.cpp  Neo_Object.cpp
src/NeoInfused/ECS/Components/: Neo_SpriteComponent.hpp
src/NeoInfused/Layer/: Neo_InputLayer.cpp  Neo_LayerGroup.cpp  Neo_LayerStack.cpp
src/NeoInfused/Scene/: Neo_Scene.cpp
src/NeoInfused/Sprite/: Neo_Font.cpp  Neo_Graphic2D.cpp  Neo_SpriteData.cpp  Neo_SpriteHandle.cpp  Neo_SpriteRegistry.cpp  Neo_SpriteSheet.cpp  Neo_Text.cpp  Neo_Texture.cpp  Neo_TextureHandle.cpp  Neo_TextureRegistry.cpp
src/NeoInfused/core/: neo_app.cpp  neo_dynamic-library.cpp  neo_event.cpp  neo_frame-buffer.cpp  neo_input.cpp  neo_layer-group.cpp  neo_layer-storage.cpp  neo_scoped-timer.cpp  neo_window-storage.cpp  neo_window.cpp
src/NeoInfused/core/app/: neo_app.cpp  neo_window-subsystem.cpp  neo_window-system-set.cpp
src/NeoInfused/data_structures/: neo_event-queue.cpp  neo_layer-storage.cpp  neo_scene-storage.cpp  neo_window-storage.cpp
src/NeoInfused/game/: neo_component-registry.cpp  neo_entity.cpp  neo_object.cpp  neo_scene-storage.cpp  neo_scene.cpp
src/NeoInfused/graphic/: neo_shader.cpp  neo_triangle.cpp
src/NeoInfused/graphics/: neo_buffers.cpp  neo_context.cpp  neo_mesh.cpp  neo_shader.cpp
src/NeoInfused/graphics/gl/: neo-gl_buffers.cpp  neo-gl_context.cpp  neo-gl_mesh.cpp  neo-gl_shader.cpp  neo_gl_context.cpp
